--- a/.env
+++ b/.env
@@ -26,3 +26,5 @@ SMTP_PASSWORD = okdr poic dqdi yqjv
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_FROM_EMAIL=somasekhardarisi7@gmail.com
+
+NODE_ENV=production
