--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "shopwave",
   "version": "1.0.0",
   "description": "ShopWave an E-commerce web application.",
-  "main": "backend/server.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
     "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "somasekhar",
   "type": "module",
@@ -16,6 +16,7 @@
     "cloudinary": "^2.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-spawn": "^7.0.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
